classDiagram
    %% ===== Main Entities =====
    class User {
        +id: UUID
        +first_name: String
        +last_name: String
        +email: String
        +password: String
        +is_admin: Boolean
        +created_at: DateTime
        +updated_at: DateTime
        +register()
        +authenticate()
        +update_profile()
        +delete_account()
    }

    class Place {
        +id: UUID
        +title: String
        +description: String
        +price: Float
        +latitude: Float
        +longitude: Float
        +add_amenity(amenity)
        +remove_amenity(amenity)
        +get_reviews()
    }

    class Review {
        +id: UUID
        +rating: Integer
        +comment: String
        +created_at: DateTime
        +updated_at: DateTime
        +edit_comment()
        +delete()
    }

    class Amenity {
        +id: UUID
        +name: String
        +description: String
        +update_description()
    }

    %% ===== Relationships =====
    User "1" -- "0..*" Place : "owns"
    User "1" -- "0..*" Review : "writes"
    Place "1" -- "0..*" Review : "has"
    Place "1" -- "*" Amenity : "has"
